deployment/go-fiber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-fiber
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: go-fiber
  template:
    metadata:
      labels:
        app: go-fiber
    spec:
      containers:
        - name: go-fiber
          image: iamlookod/go-fiber:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: regcred
