deployment/go-fiber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-fiber
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: go-fiber
