deployment/go-fiber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-fiber
spec:
  ingressClassName: nginx
  rules:
    - host: go-fiber.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-fiber
                port:
                  number: 80
